[gd_scene load_steps=34 format=3 uid="uid://boerlu017qoxc"]

[ext_resource type="Script" uid="uid://dn5ueuys22ugd" path="res://Scripts/final_battle_level_1.gd" id="1_nkr87"]
[ext_resource type="Texture2D" uid="uid://xenlds0o8ci6" path="res://Assets/art/background/BACKGROUND_ART_SKETCH_2.png" id="2_tk0fa"]
[ext_resource type="Texture2D" uid="uid://c8ctvirugussx" path="res://Assets/art/background/BACKGROUND_ART_SKETCH_2-2.png" id="3_f1e4r"]
[ext_resource type="PackedScene" uid="uid://c3egt0yjxsvrn" path="res://Scenes/player_1.tscn" id="4_f60m1"]
[ext_resource type="PackedScene" uid="uid://b4fwndsghnvmc" path="res://Scenes/player_2.tscn" id="5_hvwlt"]
[ext_resource type="PackedScene" uid="uid://cy7nosfcmj6l0" path="res://Scenes/final_boss.tscn" id="6_reli8"]
[ext_resource type="Texture2D" uid="uid://dngq85lr2q0kv" path="res://Assets/art/background/Options/BAR_EFFECT_VACIO.png" id="7_0mfdm"]
[ext_resource type="PackedScene" uid="uid://cj0wechyf4nf1" path="res://Scenes/poison_cloud.tscn" id="7_214cm"]
[ext_resource type="Texture2D" uid="uid://dy4f2nu1pdv8p" path="res://Assets/art/background/Options/MUSIC_EFFECT.png" id="8_0jhcm"]
[ext_resource type="Texture2D" uid="uid://ch6hbtjs06x3l" path="res://Assets/art/sprites/complements_sprites/shape_character.png" id="9_214cm"]
[ext_resource type="Texture2D" uid="uid://ccfvct5yvy3y4" path="res://Assets/art/sprites/Enemigos/1.png" id="10_0jhcm"]
[ext_resource type="Texture2D" uid="uid://wgdd4pjcahpm" path="res://Assets/art/sprites/complements_sprites/characater_1_profile.png" id="10_vrfk5"]
[ext_resource type="Texture2D" uid="uid://3i466vl6hlny" path="res://Assets/art/sprites/complements_sprites/character_2_profile.png" id="11_csxv4"]
[ext_resource type="FontFile" uid="uid://xrh2ke3d1khs" path="res://Assets/fonts/Slackey-Regular.ttf" id="12_32j16"]
[ext_resource type="Texture2D" uid="uid://78uicu7sheov" path="res://Assets/art/sprites/complements_sprites/coin_1.png" id="13_a4d50"]
[ext_resource type="Texture2D" uid="uid://dn3imkkyfogyt" path="res://Assets/art/sprites/complements_sprites/coin_2.png" id="14_057va"]
[ext_resource type="Texture2D" uid="uid://c5udsfo1kf8ja" path="res://Assets/art/sprites/complements_sprites/coin_3.png" id="15_w7xqr"]
[ext_resource type="Texture2D" uid="uid://bd3b6n6yc4blk" path="res://Assets/art/sprites/complements_sprites/coin_4.png" id="16_4kp6h"]
[ext_resource type="Texture2D" uid="uid://cyuhv8fianx7e" path="res://Assets/art/sprites/complements_sprites/coin_5.png" id="17_ccrab"]
[ext_resource type="Texture2D" uid="uid://cs77h4duywogo" path="res://Assets/art/sprites/complements_sprites/coin_6.png" id="18_5xp07"]
[ext_resource type="Texture2D" uid="uid://dgejrxmm660e8" path="res://Assets/art/sprites/complements_sprites/coin_7.png" id="19_drcxw"]
[ext_resource type="Texture2D" uid="uid://625cpyvd5d2a" path="res://Assets/art/sprites/complements_sprites/arrow_with_go_text.png" id="20_3xxpn"]
[ext_resource type="PackedScene" uid="uid://c274vlvelf5gf" path="res://Scenes/ui_abilities.tscn" id="21_g6gy1"]
[ext_resource type="Script" uid="uid://c0ceds5i5fjas" path="res://Scripts/Camera/camera_2d.gd" id="22_xt53k"]
[ext_resource type="PackedScene" uid="uid://ded5rvlm7p5bl" path="res://Scenes/Interfaz/GameOver.tscn" id="23_8hkf8"]
[ext_resource type="Script" uid="uid://rgf34aen2wn0" path="res://Scripts/Shaders/offscreen_peek_hud.gd" id="24_wnopm"]
[ext_resource type="Shader" uid="uid://o2t650ukqie6" path="res://Scripts/Shaders/game_world.gdshader" id="25_oj735"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_082u5"]
size = Vector2(139, 666)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dwh8s"]
size = Vector2(139, 661)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbu76"]
size = Vector2(1722, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_8fis1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_a4d50")
}, {
"duration": 1.0,
"texture": ExtResource("14_057va")
}, {
"duration": 1.0,
"texture": ExtResource("15_w7xqr")
}, {
"duration": 1.0,
"texture": ExtResource("16_4kp6h")
}, {
"duration": 1.0,
"texture": ExtResource("17_ccrab")
}, {
"duration": 1.0,
"texture": ExtResource("18_5xp07")
}, {
"duration": 1.0,
"texture": ExtResource("19_drcxw")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uoq7l"]
shader = ExtResource("25_oj735")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jhcm"]
size = Vector2(1587, 18)

[node name="Final_battle_level_1" type="Node2D"]
script = ExtResource("1_nkr87")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(817, 171)
scale = Vector2(0.4085, 0.37451)
texture = ExtResource("2_tk0fa")

[node name="Sprite2D3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(2445, 172)
scale = Vector2(0.4085, 0.37451)
texture = ExtResource("2_tk0fa")

[node name="PISO" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-345, 67)
scale = Vector2(1.08375, 0.566667)
texture = ExtResource("3_f1e4r")
centered = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(59.5, 317)
shape = SubResource("RectangleShape2D_082u5")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(1247, 297)
shape = SubResource("RectangleShape2D_dwh8s")

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2(844, 637)
shape = SubResource("RectangleShape2D_gbu76")

[node name="Player_1" parent="." instance=ExtResource("4_f60m1")]
position = Vector2(288, 322)

[node name="Player_2" parent="." instance=ExtResource("5_hvwlt")]
position = Vector2(314, 489)

[node name="Final_Boss" parent="." instance=ExtResource("6_reli8")]
position = Vector2(1042, 383)
scale = Vector2(1, 1)
frames_face_right = false
default_anim = "default"
poison_scene = ExtResource("7_214cm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
offset_left = 337.0
offset_top = 186.0
offset_right = 718.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 60
text = "Ready?"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ProgressBar_alien_1" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 0.76378
anchor_bottom = 0.0555556
offset_left = 98.0
offset_top = 24.0
offset_right = 190.125
offset_bottom = 57.0
scale = Vector2(0.12157, 0.612286)
max_value = 200.0
value = 200.0
texture_under = ExtResource("7_0mfdm")
texture_progress = ExtResource("8_0jhcm")
metadata/_edit_use_anchors_ = true

[node name="ProgressBar_alien_2" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 273.0
offset_top = 24.0
offset_right = 1245.0
offset_bottom = 93.0
rotation = -0.00284467
scale = Vector2(0.122, 0.612)
max_value = 400.0
value = 400.0
texture_under = ExtResource("7_0mfdm")
texture_progress = ExtResource("8_0jhcm")
metadata/_edit_use_anchors_ = true

[node name="ProgressBar_boss" type="TextureProgressBar" parent="CanvasLayer"]
modulate = Color(1, 0, 1, 1)
anchors_preset = -1
anchor_left = -0.00868045
anchor_right = 0.0642361
offset_left = 966.0
offset_top = 28.5
offset_right = 1938.4
offset_bottom = 97.5
rotation = -0.00284467
scale = Vector2(0.122, 0.612)
max_value = 1000.0
value = 1000.0
texture_under = ExtResource("7_0mfdm")
texture_progress = ExtResource("8_0jhcm")
metadata/_edit_use_anchors_ = true

[node name="ProgressBar_ability_1" type="ProgressBar" parent="CanvasLayer"]
modulate = Color(1, 1, 0, 1)
offset_left = 98.0
offset_top = 69.0
offset_right = 191.0
offset_bottom = 85.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="ProgressBar_ability_2" type="ProgressBar" parent="CanvasLayer"]
modulate = Color(1, 1, 0, 1)
offset_left = 289.0
offset_top = 69.0
offset_right = 367.0
offset_bottom = 85.0
max_value = 150.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(77, 51)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_214cm")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(264, 58)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_214cm")

[node name="Sprite2D4" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(1, 0, 1, 1)
position = Vector2(1094, 49.5)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_214cm")

[node name="1" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1088, 49)
scale = Vector2(0.0616044, 0.0637611)
texture = ExtResource("10_0jhcm")

[node name="Characater1Profile" type="Sprite2D" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(80, 51)
scale = Vector2(0.2, 0.2)
texture = ExtResource("10_vrfk5")

[node name="Character2Profile" type="Sprite2D" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(265, 50)
scale = Vector2(0.21, 0.21)
texture = ExtResource("11_csxv4")

[node name="cont monedas2" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.155
anchor_top = 0.198
anchor_right = 0.155
anchor_bottom = 0.198
offset_left = 121.44
offset_top = -23.304
offset_right = 148.44
offset_bottom = 23.696
theme_override_fonts/font = ExtResource("12_32j16")
theme_override_font_sizes/font_size = 33
text = "0"
metadata/_edit_use_anchors_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(77, 118)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_8fis1")
autoplay = "default"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(267, 121)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_8fis1")
autoplay = "default"

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
position = Vector2(1073, 140)
scale = Vector2(0.3, 0.3)
texture = ExtResource("20_3xxpn")

[node name="cont monedas" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.109
anchor_top = 0.179
anchor_right = 0.109
anchor_bottom = 0.179
offset_left = -13.568
offset_top = -10.992
offset_right = 10.432
offset_bottom = 36.008
theme_override_fonts/font = ExtResource("12_32j16")
theme_override_font_sizes/font_size = 33
text = "0"
metadata/_edit_use_anchors_ = true

[node name="UI_abilities" parent="CanvasLayer" instance=ExtResource("21_g6gy1")]
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="." groups=["camara", "main_camera"]]
position = Vector2(706, 301)
position_smoothing_enabled = true
script = ExtResource("22_xt53k")

[node name="GameOver" parent="." instance=ExtResource("23_8hkf8")]

[node name="OffscreenPeekHUD2" type="CanvasLayer" parent="."]
layer = 3
script = ExtResource("24_wnopm")

[node name="Peek1" type="Control" parent="OffscreenPeekHUD2"]
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Circle" type="TextureRect" parent="OffscreenPeekHUD2/Peek1"]
material = SubResource("ShaderMaterial_uoq7l")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.275
anchor_right = 0.25
anchor_bottom = 0.275
offset_top = 233.0
offset_right = 110.0
offset_bottom = 347.0
metadata/_edit_use_anchors_ = true

[node name="SVP1" type="SubViewport" parent="OffscreenPeekHUD2"]
process_priority = 3
transparent_bg = true

[node name="PeekCamera1" type="Camera2D" parent="OffscreenPeekHUD2/SVP1"]

[node name="SVP2" type="SubViewport" parent="OffscreenPeekHUD2"]
transparent_bg = true

[node name="PeekCamera2" type="Camera2D" parent="OffscreenPeekHUD2/SVP2"]

[node name="Peek2" type="Control" parent="OffscreenPeekHUD2"]
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Circle" type="TextureRect" parent="OffscreenPeekHUD2/Peek2"]
material = SubResource("ShaderMaterial_uoq7l")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.399375
anchor_top = 0.525
anchor_right = 0.399375
anchor_bottom = 0.525
offset_left = -5.975
offset_top = 450.0
offset_right = 104.025
offset_bottom = 564.0

[node name="StaticBody2D4" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2(869, 245)
shape = SubResource("RectangleShape2D_0jhcm")
